[tool.poetry]
name = "networkmedia"
version = "0.1.0"
description = "Creating a network from media content."
authors = ["avisionh <a_vision@hotmail.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
