[tool.poetry]
name = "networkmedia"
version = "0.1.0"
description = "Creating a network from media content."
authors = ["avisionh <a_vision@hotmail.co.uk>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
black = "^20.8b1"
pytest = "^6.2.2"
pre-commit = "^2.10.1"
detect-secrets = "^1.0.3"
coverage = "^5.5"
flake8 = "^3.8.4"
coveralls = "^3.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
